# clawstack

./: .dockerignore  .gitignore  Dockerfile  GITHUB_SEO.md  LICENSE  OPENCLAW_FINAL_SPEC.md  README.md  app.js  business-model.md  docker-compose.yml  index.html  llms.txt  pyproject.toml  robots.txt  site-config.example.json  site.webmanifest  sitemap.xml  styles.css
.github/workflows/: ci.yml
backend/: .env.example  README.md
backend/clawstack_backend/: __init__.py  app.py  cli.py  config.py  delivery.py  models.py  protection.py  render.py  site_config.py  storage.py
backend/tests/: test_app.py  test_cli.py  test_config.py  test_delivery.py
configs/: README.md  openclaw-budget.json  openclaw-free.json  openclaw.schema.json
deploy/: Caddyfile.example  clawstack.service.example  nginx.conf.example
docs/: README.md  api-providers.md  budget-calculator.md  context-map.md  deployment.md  docker-sandbox.md  example-setups.md  faq.md  gws-setup.md  models.md  open-core-model.md  own-api.md  quick-start.md  roadmap.md  security.md  site-config.md  wordpress-option.md
old/: OPENCLAW_HYPERSPEC.md  OPENCLAW_HYPERSPEC_v2.md  README.md  openclaw-budget-setup.html  ready for final price.md  result.md
scripts/: README.md  check_configs.py  openclaw.ps1  openclaw.sh  run_checks.ps1  run_checks.sh
skills/: README.md
skills/config-audit/: SKILL.md
skills/incident-brief/: SKILL.md
skills/provider-watch/: SKILL.md
skills/weekly-intel/: SKILL.md
workspace/: AGENTS.md  COST_RULES.md  HEARTBEAT.md  README.md  SOUL.md
